Enhances plant data and updates website structure
Adds detailed attributes to plant data including origin, soil, temperature, and humidity. Reorganizes web pages with improved descriptions, navigation, and visuals to better support plant care guidance. Introduces new pages for "My Plants" and "Plant Library" with dynamic functionality. Updates hero image and UI styling for consistency and usability.

--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -344,7 +344,9 @@ nav ul li a:hover:after {
 /* End of Hero Section */
 
 /* ========== BENEFITS SECTION ========== */
-.fas {
+.benefits-item .fa-lungs,
+.benefits-item .fa-heart,
+.benefits-item .fa-house {
   font-size: 1rem;
   color: var(--accent-yellow);
   background: var(--primary-green);
@@ -600,6 +602,12 @@ nav ul li a:hover:after {
   gap: 20px;
 }
 
+.start-primary-btn:hover {
+  color: var(--bg-light-green);
+  border: 2px solid var(--accent-yellow);
+
+}
+
 .start-secondary-btn {
   background-color: var(--primary-green);
   color: var(--bg-light-green);
@@ -608,8 +616,9 @@ nav ul li a:hover:after {
 }
 
 .start-secondary-btn:hover {
-  background-color: var(--bg-light-green);
+  background-color: var(--accent-yellow);
   color: var(--primary-green);
+  border:none;
 }
 
 /* For Small Screens */
