--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -149,7 +149,7 @@ nav {
   color: var(--color-primary);
   box-shadow: var(--shadow-small);
   position: relative;
-  height: 120px;
+  height: 80px;
   z-index: 100;
 }
 nav ul {
@@ -177,7 +177,7 @@ nav ul li a:hover:after {
   height: 2px;
   background-color: var(--accent-yellow);
   position: absolute;
-  bottom: -5px;
+
   left: 0;
   z-index: 1;
   border-radius: 2px;
@@ -218,12 +218,14 @@ nav ul li a:hover:after {
   }
   .logo {
     padding: 10px;
+    
   }
   #menu-icon,
   #close-icon {
     display: block;
     color: var(--accent-yellow);
   }
+
   #close-icon {
     display: none;
   }
@@ -251,23 +253,13 @@ nav ul li a:hover:after {
   nav ul li a.active {
     position: relative;
     text-decoration: none;
+    color: var(--accent-yellow);
   }
-  nav ul li a.active::after {
-    content: "";
-    display: block;
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: 3px;
-    border-radius: 2px;
-    bottom: -6px;
-    transform: scaleX(0);
-    transition: transform 0.3s ease-in;
-    transform-origin: left;
-  }
+ 
   nav ul li a:hover::after,
   nav ul li a.active::after {
-    transform: scaleX(1);
+    transform: scaleX(0);
+    
   }
   #menu-list {
     transition: all 0.7s ease-in-out;
