--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -60,8 +60,6 @@ html {
   box-sizing: border-box;
 }
 
-
-
 h1 {
   font-size: var(--font-size-xxlarge);
   line-height: 1.15;
@@ -72,12 +70,13 @@ h2 {
   font-size: var(--font-size-xlarge);
   line-height: 1.2;
   font-weight: var(--font-weight-medium);
+  color: var(--primary-green);
 }
 
 h3 {
   font-size: var(--font-size-large);
   line-height: 1.3;
-  font-weight: var(--font-weight-medium);
+  font-weight: var(--font-weight-bold);
 }
 
 p,
@@ -206,6 +205,9 @@ nav ul li a:hover:after {
 }
 
 #menu-icon,
+.fa-solid,
+.fa-bars,
+.fa-xmark,
 #close-icon {
   display: none;
   cursor: pointer;
@@ -432,7 +434,6 @@ nav ul li a:hover:after {
   gap: var(--spacing-md);
 }
 
-
 .card-container {
   display: flex;
   flex-wrap: wrap;
@@ -481,7 +482,6 @@ figcaption > p {
   color: var(--text-color-secondary);
   margin: 0;
 }
-
 
 @media (max-width: 768px) {
   .card-container {
@@ -564,6 +564,7 @@ figcaption > p {
 .start-title {
   grid-area: title;
   margin-bottom: 20px;
+  color: var(--bg-light-green);
 }
 
 .start-description {
@@ -666,7 +667,6 @@ figcaption > p {
 .footer-modified {
   font-style: italic;
 }
-
 
 .footer-copyright {
   margin-top: 20px;
